test_regress/t/t_with_unsup.out
%Error-UNSUPPORTED: t/t_with_unsup.v:19:31: Unsupported: with statements
   19 |       found = aliases.find(i) with (i == to_find);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:21:23: Unsupported: with statements
   21 |       aliases.find(i) with (i == to_find);
      |                       ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:24:28: Unsupported: with statements
   24 |       found = aliases.find with (item == i);
      |                            ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:25:20: Unsupported: with statements
   25 |       aliases.find with (item == i);
      |                    ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:29:30: Unsupported: with statements
   29 |       found = aliases.unique with (id);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:30:32: Unsupported: with statements
   30 |       found = aliases.unique() with (id);
      |                                ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:31:33: Unsupported: with statements
   31 |       found = aliases.unique(i) with (id);
      |                                 ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:32:26: Unsupported: with statements
   32 |       found = aliases.or with (id);
      |                          ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:33:27: Unsupported: with statements
   33 |       found = aliases.and with (id);
      |                           ^~~~
%Error-UNSUPPORTED: t/t_with_unsup.v:34:27: Unsupported: with statements
   34 |       found = aliases.xor with (id);
      |                           ^~~~
%Error: Exiting due to
